fix(security): takeout-csp-csrf
