# docs/swagger.yaml
@@ -160,11 +160,6 @@ paths:
       - application/json
       description: Create/register a new consumer
       parameters:
-      - description: CSRF Token
-        in: header
-        name: X-CSRF-Token
-        required: true
-        type: string
       - description: Consumer Data
         in: body
         name: consumer
@@ -193,11 +188,6 @@ paths:
     get:
       description: Get detail of consumer by ID
       parameters:
-      - description: CSRF Token
-        in: header
-        name: X-CSRF-Token
-        required: true
-        type: string
       - description: Consumer ID
         in: path
         name: id
@@ -227,11 +217,6 @@ paths:
       - application/json
       description: Authenticate user and generate a token
       parameters:
-      - description: CSRF Token
-        in: header
-        name: X-CSRF-Token
-        required: true
-        type: string
       - description: Login Credentials
         in: body
         name: user
@@ -266,11 +251,6 @@ paths:
       - application/json
       description: Create/register a new user
       parameters:
-      - description: CSRF Token
-        in: header
-        name: X-CSRF-Token
-        required: true
-        type: string
       - description: User Data
         in: body
         name: user
@@ -312,11 +292,6 @@ paths:
       description: Endpoint to create a new transaction. Validates consumer limit
         and processes the transaction.
       parameters:
-      - description: CSRF Token
-        in: header
-        name: X-CSRF-Token
-        required: true
-        type: string
       - description: Transaction data
         in: body
         name: transaction
@@ -347,11 +322,6 @@ paths:
       - application/json
       description: Fetch details of a transaction by its ID.
       parameters:
-      - description: CSRF Token
-        in: header
-        name: X-CSRF-Token
-        required: true
-        type: string
       - description: Transaction ID
         in: path
         name: id
